--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -7,4 +7,10 @@
     <% end %>
   </ul>
 
+  <ul>
+   <%= @bookmarks.each do |bookmark| %>
+   <li><%= link_to bookmark.movie.title['original_title'], class: "btn btn-secondary"%></li>
+
+  </ul>
+
   <%= link_to "Create New List",new_list_path, class: "btn btn-secondary"%>
